# SoccerPlayer_ReID

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: detect.py
